--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.6",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
